tests/expectations/compiler/dyn_record/dyn_record_cast_primitive_fail.out
Error [EPAR0370005]: expected 'record' -- found '{'
    --> compiler-test:2:28
     |
   2 |     fn main(x: u64) -> dyn {
     |                            ^
Error [EPAR0370005]: expected 'record' -- found ';'
    --> compiler-test:3:24
     |
   3 |         return x as dyn;
     |                        ^
